feat: Enhance content generation and styling
Introduces new TypeScript interfaces for user profiles, account connections, performance scores, content variations, engagement metrics, and branding configurations. Expands the `Platform` enum to include `LinkedIn`.

Updates the main HTML to refine the page title and includes new CSS for custom scrollbars and glassmorphism effects.

Enhances the `constants.ts` file by updating `APP_LOGO_BASE64` and adding `defaultLogo` and `overlayOpacity` to template configurations.

Modifies the `wordpress.ts` service to improve URL validation, handle HTML entities, and include more comprehensive error reporting.

Refactors the `gemini.ts` service to utilize specific Gemini models for text, image, TTS, and video generation, and to create more structured prompts for generating social media captions and suggesting performance improvements. This includes adapting the API calls for the new Gemini models and improving the prompt engineering for better results.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NewsFlow SaaS</title>
+    <title>NewsFlow SaaS - Professional Content Automation</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Inter', sans-serif; background-color: #f9fafb; }
+        body { 
+            font-family: 'Inter', sans-serif; 
+            background-color: #f8fafc; 
+            color: #0f172a;
+            -webkit-font-smoothing: antialiased;
+        }
+
+        /* Custom Scrollbar for the SaaS look */
+        .custom-scrollbar::-webkit-scrollbar {
+            width: 5px;
+        }
+        .custom-scrollbar::-webkit-scrollbar-track {
+            background: transparent;
+        }
+        .custom-scrollbar::-webkit-scrollbar-thumb {
+            background: #e2e8f0;
+            border-radius: 10px;
+        }
+        .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+            background: #cbd5e1;
+        }
+
+        /* Glassmorphism Refinements */
+        .glass-panel {
+            background: rgba(255, 255, 255, 0.7);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+        }
+
+        @keyframes pulse-soft {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0.5; }
+        }
+        .animate-pulse-soft {
+            animation: pulse-soft 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+        }
     </style>
 <script type="importmap">
 {
